[skip ci] More Meson Stuff

--- a/docs/meson.build
+++ b/docs/meson.build
@@ -1,51 +1,48 @@
-#install(TARGETS pcem RUNTIME DESTINATION bin)
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/430vx')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/acer386')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ami286')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ami386')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ami386dx')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ami486')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/amixt')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/cbm_pc10')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/cmdpc30')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/dells200')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/deskpro386')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/dtk')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/dtk386')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/endeavor')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/europc')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/genxt')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/hot-433')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/huyndaixt')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/huyndaixte')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmat')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmpc')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmpcjr')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmps1es')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ibmxt')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/jukopc')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/ltxt')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/lxt3')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/mach64gx')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/megapc')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/mr386dx')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/olivetti_m24')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/oti067')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc1512')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc1640')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc200')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc2086')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pc3086')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/px386')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/pxxt')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/revenge')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/sis496')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/tandy')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/tandy1000hx')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/tandy1000sl2')
+install_data('roms.txt', install_dir: get_option('datadir') / 'roms/win486')
+install_data('configs.txt', install_dir: get_option('datadir') / 'configs')
+install_man('pcem.man.1')
 
-#install(DIRECTORY ${CMAKE_SOURCE_DIR}/nvr/ DESTINATION share/pcem/nvr/default)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/430vx)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/acer386)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ami286)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ami386)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ami386dx)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ami486)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/amixt)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/cbm_pc10)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/cmdpc30)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/dells200)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/deskpro386)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/dtk)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/dtk386)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/endeavor)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/europc)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/genxt)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/hot-433)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/huyndaixt)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/huyndaixte)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ibmat)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ibmpc)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ibmpcjr)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ibmps1es)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ibmxt)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/jukopc)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/ltxt)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/lxt3)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/mach64gx)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/megapc)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/mr386dx)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/olivetti_m24)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/oti067)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/pc1512)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/pc1640)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/pc200)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/pc2086)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/pc3086)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/px386)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/pxxt)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/revenge)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/sis496)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/tandy)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/tandy1000hx)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/tandy1000sl2)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/roms.txt DESTINATION share/pcem/roms/win486)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/configs.txt DESTINATION share/pcem/configs)
-#install(FILES ${CMAKE_SOURCE_DIR}/docs/pcem.man DESTINATION share/man/man1)
-#install(DIRECTORY ${CMAKE_SOURCE_DIR}/includes/public/ DESTINATION include FILES_MATCHING PATTERN *.h)
