--- a/meson.build
+++ b/meson.build
@@ -5,13 +5,14 @@ add_project_arguments('-DPCEM_VERSION_STRING="' + meson.project_version() + '"',
 pcem_private_api = []
 pcem_public_api = []
 pcem_src = []
+pcem_project_libraries = []
 
 subdir('includes')
 
 compiler = meson.get_compiler('c')
 sdl2 = dependency('sdl2')
 openal = dependency('openal')
-opengl = dependency('opengl')
+opengl = dependency('gl')
 wxwidgets = dependency('wxwidgets')
 
 pcem_dependencies = [sdl2, openal, opengl, wxwidgets]
@@ -24,3 +25,5 @@ add_project_arguments('-fcommon', language: ['c', 'cpp'])
 
 subdir('docs')
 subdir('src')
+
+install_subdir('nvr', install_dir: get_option('datadir') / 'nvr/default', strip_directory : true)
