Fixed some errors with CMake code.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,26 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug" OR CMAKE_BUILD_TYPE STREQUAL "RelWithDebInf
         message("       PRINTER_DEBUG debug output: ${PCEM_PRINTER_DEBUG}")
 endif()
 message("***************************************************************")
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+	set(PCEM_SHARE_DIR "bin" CACHE STRING "PCem Share Directory")
+	set(PCEM_PLUGIN_DIR "bin/plugins" CACHE STRING "PCem Plugin Directory")
+	set(PCEM_BIN_DIR "bin" CACHE STRING "PCem Binary Directory")
+	set(PCEM_LIB_DIR "sdk/lib" CACHE STRING "PCem Library Directory")
+	set(PCEM_INCLUDE_DIR "sdk/include" CACHE STRING "PCem Include File Directory")
+else()
+	set(PCEM_SHARE_DIR "share/pcem" CACHE STRING "PCem Share Directory")
+	set(PCEM_PLUGIN_DIR "share/pcem/plugins" CACHE STRING "PCem Plugin Directory")
+	set(PCEM_BIN_DIR "bin" CACHE STRING "PCem Binary Directory")
+	set(PCEM_LIB_DIR "lib" CACHE STRING "PCem Library Directory")
+	set(PCEM_INCLUDE_DIR "include" CACHE STRING "PCem Include File Directory")
+endif()
+message("PCem Program Directories:")
+message("       PCem Share Directory: ${PCEM_SHARE_DIR}")
+message("       PCem Binary Directory: ${PCEM_BIN_DIR}")
+message("       PCem Library Directory: ${PCEM_LIB_DIR}")
+message("       PCem Plugin Directory: ${PCEM_PLUGIN_DIR}")
+message("       PCem Include File Directory: ${PCEM_INCLUDE_DIR}")
+message("***************************************************************")
 
 set(OpenGL_GL_PREFERENCE GLVND)
 find_package(SDL2 REQUIRED)
