Fixed the detection code to skip if running on a toolchain file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,13 +10,13 @@ include(${CMAKE_SOURCE_DIR}/cmake/apple.cmake)
 include(${CMAKE_SOURCE_DIR}/cmake/debugdefines.cmake)
 
 # TODO: This whole thing is jank, replace with a real way to determine cpu type
-if(WIN32)
-        if(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
+if((NOT DEFINED CMAKE_TOOLCHAIN_FILE) AND WIN32)
+        if(${CMAKE_C_COMPILER} MATCHES ".*mingw32.*")
+                set(CMAKE_SYSTEM_PROCESSOR i386)
+        elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64")
                 set(CMAKE_SYSTEM_PROCESSOR x86_64)
         elseif(${CMAKE_SYSTEM_PROCESSOR} STREQUAL "ARM64")
                 set(CMAKE_SYSTEM_PROCESSOR arm64)
-        elseif(${CMAKE_C_COMPILER} MATCHES ".*mingw32.*")
-                set(CMAKE_SYSTEM_PROCESSOR i386)
         endif()
 endif()
 set(PCEM_CPU_TYPE ${CMAKE_SYSTEM_PROCESSOR})
@@ -34,6 +34,9 @@ set(PCEM_VERSION_STRING "vNext" CACHE STRING "PCem Version String")
 set(PCEM_DEFINES ${PCEM_DEFINES} PCEM_VERSION_STRING="${PCEM_VERSION_STRING}")
 
 message("PCem ${PCEM_VERSION_STRING} - Build Type: ${CMAKE_BUILD_TYPE}")
+if(DEFINED CMAKE_TOOLCHAIN_FILE)
+        message("Cross Toolchain File: ${CMAKE_TOOLCHAIN_FILE}")
+endif()
 message("***************************************************************")
 message("OS Building For: ${CMAKE_SYSTEM_NAME}")
 message("System Processor: ${PCEM_CPU_TYPE}")
